feat: gコマンドにgamemodeエイリアスを追加